refactor(microservices): unify reactive security, service communication layer and notification architecture
- Introduced reactive security configuration in all services
- Replaced legacy client classes with dedicated service clients
- Refactored AssessmentService with resilient reactive flow
- Standardized event-driven model across services
- Restructured notification module (DTO split, mapper, templates)
- Improved WebClient interception and configuration
- Removed deprecated security and client configurations
- Updated integration and unit tests accordingly
- Cleaned obsolete storage artifacts

This update stabilizes the full backend integration and prepares the platform for production-ready reactive microservices.